--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-popover": "^1.1.14",
@@ -14,6 +15,7 @@
     "clsx": "^2.1.1",
     "firebase": "^12.0.0",
     "html-react-parser": "^5.2.6",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.526.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -56,4 +58,5 @@
     "postcss-loader": "^8.1.1",
     "tailwindcss": "^3.4.17"
   }
+  
 }
